--- a/WestLake/bin/AndroidManifest.xml
+++ b/WestLake/bin/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.westlake"
+    package="com.zg.westlake"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.zg.westlake.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,6 +27,11 @@
 		<activity android:name="ThreeActivity"/>
 		<activity android:name="FourActivity"/>
 		<activity android:name="FiveActivity"/>
+		<activity android:name="com.zg.westlake.homepage.ui.HomePageActiveActivity" />
+		<activity android:name="com.zg.westlake.homepage.ui.HomePageFoodActivity" />
+		<activity android:name="com.zg.westlake.homepage.ui.HomePageShowActivity" />
+		<activity android:name="com.zg.westlake.homepage.ui.HomePageExhibitionActivity" />
+		<activity android:name="com.zg.westlake.homepage.ui.HomePageWestLakeActivity" />
     </application>
 
 </manifest>
