--- a/WestLake/bin/AndroidManifest.xml
+++ b/WestLake/bin/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-sdk
         android:minSdkVersion="9"
         android:targetSdkVersion="21" />
+	<!-- 设置访问网络的权限 -->
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -22,17 +24,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="HomePageActivity"/>
-		<activity android:name="SearchPageActivity"/>
-		<activity android:name="SitesPageActivity"/>
-		<activity android:name="KnowsPageActivity"/>
-		<activity android:name="MorePageActivity"/>
-		<activity android:name="com.zg.westlake.homepage.ui.HomePageActiveActivity" />
-		<activity android:name="com.zg.westlake.homepage.ui.HomePageFoodActivity" />
-		<activity android:name="com.zg.westlake.homepage.ui.HomePageShowActivity" />
-		<activity android:name="com.zg.westlake.homepage.ui.HomePageExhibitionActivity" />
-		<activity android:name="com.zg.westlake.homepage.ui.HomePageWestLakeActivity" />
-		<activity android:name="com.zg.westlake.homepage.ui.HomePagePullRefreshActivity" />
+        <activity android:name="HomePageActivity" />
+        <activity android:name="SearchPageActivity" />
+        <activity android:name="SitesPageActivity" />
+        <activity android:name="KnowsPageActivity" />
+        <activity android:name="MorePageActivity" />
+        <activity android:name="com.zg.westlake.homepage.ui.HomePageActiveActivity" />
+        <activity android:name="com.zg.westlake.homepage.ui.HomePageFoodActivity" />
+        <activity android:name="com.zg.westlake.homepage.ui.HomePageShowActivity" />
+        <activity android:name="com.zg.westlake.homepage.ui.HomePageExhibitionActivity" />
+        <activity android:name="com.zg.westlake.homepage.ui.HomePageWestLakeActivity" />
+        <activity android:name="com.zg.westlake.homepage.ui.HomePagePullRefreshActivity" />
     </application>
 
 </manifest>
